修改查询策略接口返参为 FileInfoVo